my-app/manifests/ingress-hosts_old_ver.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
    name: ingress-hosts
    
spec:
  rules:
    - host: web1.test
      http:
        paths:
          - backend:
              serviceName: my-web1-service   # имя сервиса kubctl get svc
              servicePort: 80
